--- a/blog.html
+++ b/blog.html
@@ -51,7 +51,7 @@
     </section>
 
 
-    <script src="./index.js"></script>
+    <!-- <script src="./index.js"></script> -->
     <script src="./blog.js"></script>
 </body>
 
