Commit after done the sort section

--- a/blog.html
+++ b/blog.html
@@ -18,30 +18,45 @@
         <div class="collapse collapse-arrow bg-base-200">
             <input type="radio" name="my-accordion-2" />
             <div class="collapse-title text-xl font-medium">
-                Whats your name?
+                The scope of var, let, and const :
             </div>
             <div class="collapse-content">
-                <p>Manik</p>
+                <p class="text-justify text-slate-400 font-medium">Before es6 came out, var was used everywhere. With the advent of es6, let and const have largely eliminated the problems var had. But that doesn't mean that the use of var has completely disappeared. Some places require var in field specials. <br><br>
+                    The scope of var, let and const: <br>
+                    The scope of a variable means in which part of the code the variable can be used. The scope of var is 1. global and 2. inside the function. <br>
+                    If var is declared inside a function then its scope is limited only inside that function. But if it is declared outside a function, it can be used anywhere in the code. var can be both re-declared and updated. var is hosting, which keeps code's variable and function declarations above their scope. <br><br>
+                    On the other hand let and const are block scope. They are limited to the block in which they are declared. Variables declared with let can be updated within that block but not re-declared. But it can be declared inside any other block.
+                    Const cannot be updated or re-declared within its own block. But it can be declared in any other block. <br><br>
+                    That is why var cannot be excluded due to some problems. We can use var when there may be variables that need to be updated or re-declared depending on the context. </p>
             </div>
         </div>
 
         <div class="collapse collapse-arrow bg-base-200">
             <input type="radio" name="my-accordion-2" />
             <div class="collapse-title text-xl font-medium">
-                What do you want?
+                The use cases of null and undefined :
             </div>
             <div class="collapse-content">
-                <p>peace</p>
+                <p class="text-justify text-slate-400 font-medium">Null means nothing in JavaScript. It refers to something that no longer exists. The value of any variable can be null. This is done when the value of a variable is not useful now but may be useful later. When we need the value of that variable we can use it by setting something else instead of null. Null is treated as an object in JavaScript.
+
+                <br><br>    On the other hand, undefined in JavaScript is a variable that has no value. By setting the value of a variable to undefined, the value of that variable can be cleared.
+                    In other words, undefined means that which has not yet been determined. That is, by setting undefined as the value of a variable, that variable value is kept blank and then the value of that variable is updated.
+                    Also null and undefined can be used in different ways in the field.
+                      
+                    </p>
             </div>
         </div>
 
         <div class="collapse collapse-arrow bg-base-200">
             <input type="radio" name="my-accordion-2" />
             <div class="collapse-title text-xl font-medium">
-                What is your favourite game
+                REST API :
             </div>
             <div class="collapse-content">
-                <p class="text-justify text-slate-400 font-medium">Football
+                <p class="text-justify text-slate-400 font-medium">The full form of API is Application Programming Interface. We can call API as a medium or method or system. That is, the medium through which we can collect data from any platform and use it on our own platform is called API.
+
+                 <br> <br>  The full form of REST API is Representational State Transfer Application Programming Interface. Rest APIs and APIs work similarly to carriers. From time to time we share our information on different platforms for our work. For example, Google account. After we provide information to Google Account, Google Account stores that information. Again, if I want to do any work on a new platform, the new platform may ask for our information. In that case, we can tell the Google account to give our information to the new platform without giving the information ourselves. In this case, the medium through which information is exchanged between the Google account and the new platform is called Rest API.
+                    
 
                 </p>
             </div>
