--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
             <div class="inline">
-                <button id="sortButton" class="btn bg-slate-200 text-xl">Sort by view</button>
+                <button id="sortButton" onclick="sortHandler(true)" class="btn bg-slate-200 text-xl">Sort by view</button>
             </div>
 
 
@@ -63,7 +63,7 @@
         <!-- tabs -->
 
         <!-- card section -->
-        <section class="max-w-[1500px] mx-auto mt-8 border-t-4">
+        <section class="max-w-[1500px] mx-auto mt-8">
 
             <div id="cards_Container">
 
