commit again after some changes

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
             <div class="inline">
-                <button id="sortButton" onclick="sortHandler(true)" class="btn bg-slate-200 text-xl">Sort by view</button>
+                <button id="sortButton" onclick="sortHandler()" class="btn bg-slate-200 text-xl">Sort by view</button>
             </div>
 
 
