some changes done

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     <script src="https://kit.fontawesome.com/3dcc09348f.js" crossorigin="anonymous"></script>
     <!-- font awesome link -->
     <style>
-        .font-inter {
+        .text-inter {
             font-family: Inter;
         }
     </style>
 
 </head>
 
-<body class="font-inter">
+<body class="text-inter">
     <header>
         <nav
             class="max-w-[1500px] mx-auto text-center flex flex-col md:flex-row lg:flex-row   gap-5 justify-between items-center py-5 px-3 border-b-2">
